src/objects/PPAPICredential__c.object
<CustomObject>
    <description>Credentials to call PayPal Adaptive Payments Platform APIs</description>
    <fields>
        <fullName>APICertificatePassword__c</fullName>
        <description>API Certificate Password (Export Password used when converting the PEM encoded certificate/key into PKCS12).</description>
        <label>Certificate Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APICertificate__c</fullName>
        <description>Certificate for API Access in PKCS12 format and Base64 encoded.</description>
        <label>Certificate</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APIProfile__c</fullName>
        <description>Type of API Authentication Credentials</description>
        <inlineHelpText>Select 3_TOKEN if you are using APIUsername, APIPassword and APISignature.
Select CERTIFICATE if you are using APICertificate and APICertificatePassword.</inlineHelpText>
        <label>APIProfile</label>
        <picklist>
            <picklistValues>
                <fullName>3_TOKEN</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CERTIFICATE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APISignature__c</fullName>
        <label>APISignature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APIUserName__c</fullName>
        <label>APIUsername</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APIUserpassword__c</fullName>
        <label>APIUserpassword</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationID__c</fullName>
        <description>Your ApplicationID from X.com</description>
        <inlineHelpText>This is of the format &quot;APP-*&quot; and can be found on our profile page on X.com.</inlineHelpText>
        <label>ApplicationID</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>Environment where the API Credentials are valid.</description>
        <label>Environment</label>
        <picklist>
            <picklistValues>
                <fullName>Sandbox</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox-Beta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BLN PayPal API Credential</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PayPal API Credential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN PayPal API Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>